widget/css/common.less
.zocial.auth0:before {
  content: "?";
}

.zocial.auth0 {
  background-color: #ff4500;
  width: auto;
}

.zocial.block {
  text-align: center;
  display: block;
  margin: 10px 0;
  text-overflow: ellipsis;
  overflow: hidden;
}

.zocial.primary, .zocial.secondary {
  width: 100%;
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 42px;
}

.zocial.primary:before, .zocial.secondary:before {display: none;}
.zocial.primary {background-color: rgb(116, 126, 133);}
.zocial.secondary {background-color: #f0f0eb; color: #222; text-shadow: 0 1px 0 rgba(255,255,255,0.8);}

.zocial {
	-webkit-font-smoothing: antialiased;
}

label {
	font-family: sans-serif;
}

.zocial {
	font-size: 16px;
}

.next {
	text-shadow: none;
	font-weight: bold;
	font-family: 'Lucida Grande', Tahoma, sans-serif
}

